# iot_react_demo

./: .gitignore  README.md  architecture.md  commands.sh  config.py  env.example  main.py  pyproject.toml  requirements.md  step.md
controller/: README.md  controller.py  database.py
data/: init_db.py  schema.sql
doc/: todo.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts
mosquitto/: README.md  mosquitto.conf  start_local.sh  stop_local.sh
sensor/: README.md  sensor.py  test_mqtt.py
server/: database.py  main.py  test_main.py
server/api/: __init__.py  alerts.py  sensor.py
server/core/: __init__.py  websocket.py
server/tests/: README.md  __init__.py  conftest.py  test_alert_history.py  test_alert_notification.py  test_main.py  test_sensor.py  test_websocket.py
